--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+
+    .navBar {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 800px;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: center;
+        background-color: #f4f4f4;
+
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 800px;
+            width: 100%;
+            margin: 0 auto;
+            justify-content: center;
+            margin-top: 20px;
+            margin-bottom: 20px;
+
+
+            a {
+                font-size: 1.8rem;
+                padding-left: 20px;
+             }
+        }
+    }   
+
