--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,7 @@
 
 .home {
 
+
   .intro {
 
     h2 {
@@ -15,20 +16,42 @@
   }
 
   .space-images {
+    .image-format(10px, 100%)
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+
+    @media @phone{
+      .sky {
+        display: none;
+      }
+
+      .launch {
+        display: none;
+      }
+    }
+
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone{
+        display: block;
+        width: 100%;
+        margin: 2%;
+      }
     }
   }
 
   .visit-planets {
     padding: 15px;
+
+    @media @phone {
+      width: 100%;
+      padding: 50px;
+    }
 
     h3 {
       margin-top: 11px;
@@ -46,8 +69,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-top: 0;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        padding: 15px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,17 +92,29 @@
       }
 
       .btn {
+        .buttons (#23293B, white, 2rem, 40%);
+
+        @media @phone {
+          margin: 0;
+          width: 100%;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        display: block;
+        width: 105%;
+        margin-bottom: 5%;
+        margin: 0 auto;
+      }
       
       img {
-        width: 100%;
+        .image-format(10px, 100%)
         height: auto;
-        border-radius: 10px;
       }
     }
   }
