Fixed preprocessing error

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,7 +16,7 @@
   }
 
   .space-images {
-    .image-format(10px, 100%)
+    .image-format(10px, 100%);
     display: flex;
     flex-wrap: wrap;
 
@@ -113,7 +113,7 @@
       }
       
       img {
-        .image-format(10px, 100%)
+        .image-format(10px, 100%);
         height: auto;
       }
     }
