--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,15 @@ footer {
   display: flex;
   flex-wrap: wrap;
 }
+.home .space-images .blast:hover {
+  transform: scale(1.2);
+}
+.home .space-images .sky:hover {
+  transform: scale(1.2);
+}
+.home .space-images .launch:hover {
+  transform: scale(1.2);
+}
 @media only screen and (max-width: 500px) {
   .home .space-images .sky {
     display: none;
@@ -296,6 +305,9 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+.home .walk .walk-img:hover {
+  transform: scale(1.1);
 }
 @media only screen and (max-width: 500px) {
   .home .walk .walk-img {
