Fixed top image width, no scroll bar

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,12 @@
     p {
       padding:0 15px;
     }
+
+    .spaceTop {
+      @media @phone {
+        max-width: 100%;
+      }
+    }
   
   }
 
