--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,11 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+@media only screen and (max-width: 500px) {
+  .home .intro .spaceTop {
+    max-width: 100%;
+  }
+}
 .home .space-images {
   border-radius: 10px;
   width: 100%;
